runs fullscreen every 2 min

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
     "description": "This extension will lock your screen.",
     "version": "0.0.1",
     
+	"background": {
+		"persistent": true,
+		"scripts": ["setinterval.js"]
+	},
+
     "browser_action": {
     	"default_icon": "icon.png",
         "default_title": "Lock your screen",
