--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,13 @@
 {
-    "manifest_version": 2,
-
     "name": "hackdartmouth_chrome_extension",
-    "description": "This extension will lock your screen.",
     "version": "0.0.1",
-    
-	"background": {
-		"persistent": true,
-		"scripts": ["setinterval.js"]
-	},
-
+    "manifest_version": 2,
     "browser_action": {
-    	"default_icon": "icon.png",
         "default_title": "Lock your screen",
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+	"css": "popup.css"
     },
+   "permissions" : ["tabs"]
 
-    "permissions": [
-    "tabs",
-    "activeTab",  
-    "https://ajax.googleapis.com/"
-    ]
 }
+
