--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,24 @@
 {
-    "name": "hackdartmouth_chrome_extension",
-    "version": "0.0.1",
     "manifest_version": 2,
-    "browser_action": {
-        "default_title": "Lock your screen",
-        "default_popup": "popup.html",
-	"css": "popup.css"
+
+    "name": "hackdartmouth_chrome_extension",
+    "description": "This extension will lock your screen.",
+    "version": "0.0.1",
+    
+    "background": {
+        "persistent": true,
+        "scripts": ["setinterval.js"]
     },
-   "permissions" : ["tabs"]
 
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_title": "Lock your screen",
+        "default_popup": "popup.html"
+    },
+
+    "permissions": [
+    "tabs",
+    "activeTab",  
+    "https://ajax.googleapis.com/"
+    ]
 }
-
