--- a/manifest.json
+++ b/manifest.json
@@ -22,3 +22,7 @@
     "https://ajax.googleapis.com/"
     ]
 }
+/*
+The ThunderBolt Icon was made by Bogdan Rosu from www.flaticon.com.
+The FontAwesome Icons were made by Dave Gandy from www.fortawesome.github.io
+*/
