--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,9 @@
     ]
 }
 /*
-The ThunderBolt Icon was made by Bogdan Rosu from www.flaticon.com.
-The FontAwesome Icons were made by Dave Gandy from www.fortawesome.github.io
+The ThunderBolt Icon was made by Bogdan Rosu from https://www.flaticon.com.
+The FontAwesome Icons were made by Dave Gandy from https://www.fortawesome.github.io
+The photo used on the "Study Flash Cards" screen was by LEEROY from https://snip.ly
+The photo used on the popup was by Jonas Nilsson Lee from https://cupcake.nilssonlee.se
+The photo used in the "Manage Flash Cards" screen was by Axel Antas-Bergkvist from https://unsplash.com
 */
